# pdf

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE-MIT  README.md  _typos.toml
.zed/: debug.json
cli/: CMakeLists.txt  main.c
examples/: CMakeLists.txt  cmap.c  font.c  font_main.c  icc.c  pdf.c  pdf_main.c  tessellation.c
libs/: CMakeLists.txt
libs/arena/: CMakeLists.txt
libs/arena/include/arena/: arena.h  common.h  darray_impl.h  dlinked_decl.h  dlinked_impl.h  dvec_decl.h  dvec_impl.h  string.h
libs/arena/src/: arena.c  common.c  dvec_test.c
libs/canvas/: CMakeLists.txt
libs/canvas/include/canvas/: canvas.h  path_builder.h
libs/canvas/src/: canvas.c  dcel.c  dcel.h  dcel_builder.c  path_builder.c  path_builder.h  raster_canvas.c  raster_canvas.h  scalable_canvas.c  scalable_canvas.h
libs/cff/: CMakeLists.txt
libs/cff/include/cff/: cff.h
libs/cff/src/: cff.c  charsets.c  charsets.h  charstring.c  charstring.h  header.c  header.h  index.c  index.h  parser.c  parser.h  private_dict.c  private_dict.h  top_dict.c  top_dict.h  types.c  types.h
libs/codec/: CMakeLists.txt
libs/codec/include/codec/: zlib.h
libs/codec/src/: adler32.c  bitstream.c  bitstream.h  deflate.c  deflate.h  zlib.c
libs/color/: CMakeLists.txt
libs/color/include/color/: cie.h  cie_xyz.h  conversion.h  icc.h  icc_cache.h  icc_color.h  icc_curve.h  icc_lut.h  icc_tags.h  icc_types.h  rgb.h
libs/color/src/: cie.c  cie_xyz.c  conversion.c  icc.c  icc_cache.c  icc_color.c  icc_curve.c  icc_lut.c  icc_tags.c  icc_types.c  rgb.c
libs/common/include/: attributes.h
libs/err/: CMakeLists.txt
libs/err/include/err/: error.h
libs/err/src/: error.c
libs/geom/: CMakeLists.txt
libs/geom/include/geom/: mat3.h  rect.h  vec2.h  vec3.h
libs/geom/src/: mat3.c  rect.c  vec2.c  vec3.c
libs/logger/: CMakeLists.txt
libs/logger/include/logger/: log.h  log_groups.h
libs/logger/src/: log.c
libs/parse_ctx/: CMakeLists.txt
libs/parse_ctx/include/parse_ctx/: binary.h  ctx.h
libs/parse_ctx/src/: ctx.c
libs/pdf/: CMakeLists.txt
libs/pdf/include/pdf/: catalog.h  color_space.h  content_op.h  content_stream.h  deserde.h  deserde_types.h  function.h  object.h  page.h  pdf.h  resolver.h  resources.h  shading.h  stream.h  stream_dict.h  trailer.h  types.h  xobject.h
libs/pdf/include/pdf/content_stream/: operation.h  operator.h  stream.h
libs/pdf/include/pdf/fonts/: agl.h  cid_to_gid_map.h  cmap.h  encoding.h  font.h  font_descriptor.h  font_widths.h  stream_dict.h
libs/pdf/include/pdf/stream/: stream_dict.h
libs/pdf/src/: catalog.c  color_space.c  ctx.c  ctx.h  deser.c  deser.h  deserde.c  deserialize.c  deserialize.h  function.c  object.c  object.h  page.c  pdf.c  resolver.h  resources.c  shading.c  test_helpers.c  test_helpers.h  trailer.c  types.c  xobject.c  xref.c  xref.h
libs/pdf/src/content_stream/: op.c  op.h  operation.c  operation.h  operator.c  operator.h  stream.c
libs/pdf/src/fonts/: agl.c  cid_to_gid_map.c  cmap.c  cmap_paths.c  cmap_paths.h  encoding.c  font.c  font_descriptor.c  font_widths.c  stream_dict.c
libs/pdf/src/resources/: resources.c
libs/pdf/src/stream/: ascii.c  filters.c  filters.h  stream_dict.c
libs/pdf_error/: CMakeLists.txt
libs/pdf_error/include/pdf_error/: error.h
libs/pdf_error/src/: error.c
libs/postscript/: CMakeLists.txt
libs/postscript/include/postscript/: interpreter.h  object.h  resource.h  tokenizer.h
libs/postscript/src/: interpreter.c  object.c  operators.c  operators.h  procedures.c  procedures.h  resource.c  tokenizer.c
libs/render/: CMakeLists.txt
libs/render/include/render/: render.h
libs/render/src/: cache.h  font.c  font.h  graphics_state.c  graphics_state.h  render.c  shading.c  shading.h  text_state.c  text_state.h
libs/sfnt/: CMakeLists.txt
libs/sfnt/include/sfnt/: cmap.h  glyph.h  head.h  hhea.h  hmtx.h  loca.h  maxp.h  sfnt.h  types.h
libs/sfnt/src/: checksum.c  checksum.h  cmap.c  cmap.h  directory.c  directory.h  glyph.c  glyph.h  head.c  head.h  hhea.c  hhea.h  hmtx.c  hmtx.h  loca.c  loca.h  maxp.c  maxp.h  parser.c  parser.h  sfnt.c  types.c
libs/str/: CMakeLists.txt
libs/str/include/str/: alloc_str.h  ref.h
libs/str/src/: alloc_str.c  ref.c
libs/test/: CMakeLists.txt
libs/test/include/test/: test.h
libs/test/src/: main.c  test.c  test_assertions.c
src/: CMakeLists.txt  arena.c  arena.h  catalog.c  ctx.c  ctx.h  deserialize.c  deserialize.h  error.c  impl_schema.h  lex.c  lex.h  log.c  object.c  object.h  page.c  parse.c  parse.h  pdf.c  result.h  schema.c  schema_macros.h  test.c  test.h  test_helpers.c  test_helpers.h  trailer.c  types.c  vec.c  vec.h  xref.c  xref.h
src/arena/: CMakeLists.txt  arena.c  common.c  darray_impl.h  darray_test.c  dlinked_test.c  dvec_impl.h  dvec_test.c  string.c
src/canvas/: CMakeLists.txt  canvas.c  canvas.h  dcel.c  dcel.h  dcel_builder.c  path_builder.c  raster_canvas.c  raster_canvas.h  scalable_canvas.c  scalable_canvas.h  tessellate.c  tessellate.h
src/codec/: CMakeLists.txt  adler32.h  bitstream.c  bitstream.h  deflate.c  deflate.h  zlib.c
src/content_stream/: op.c  op.h  operator.c  operator.h  stream.c
src/geom/: CMakeLists.txt  mat3.c  vec2.c  vec3.c
src/logger/: CMakeLists.txt  log.c
src/pdf/: CMakeLists.txt  catalog.c  ctx.c  ctx.h  deserde_types.c  deserialize.c  deserialize.h  object.c  object.h  page.c  pdf.c  test_helpers.c  trailer.c  types.c  xref.c  xref.h
src/pdf/content_stream/: op.c  op.h  operator.c  operator.h  stream.c
src/pdf/resources/: font.c  resources.c
src/pdf/stream/: ascii.c  filters.c  filters.h  stream_dict.c  stream_dict.h
src/pdf_error/: CMakeLists.txt  error.c
src/render/: CMakeLists.txt  graphics_state.c  graphics_state.h  render.c  text_state.c  text_state.h
src/sfnt/: CMakeLists.txt  cmap.c  cmap.h  directory.c  directory.h  glyph.c  glyph.h  head.c  head.h  hhea.c  hhea.h  hmtx.c  hmtx.h  loca.c  loca.h  local.c  local.h  maxp.c  maxp.h  parser.c  parser.h  sfnt.c  types.c
src/test/: CMakeLists.txt  main.c  test.c
(+86 files in other folders)
