add_executable(pdf-example pdf.c)
target_link_libraries(pdf-example PRIVATE pdf render)
target_compile_definitions(pdf-example PRIVATE DEBUG TEST)
if (NOT MSVC)
    target_compile_options(pdf-example PRIVATE -fsanitize=address,undefined)
    target_link_options(pdf-example PRIVATE -fsanitize=address,undefined)
endif()

add_executable(font-example font.c)
target_link_libraries(font-example PRIVATE sfnt)
target_compile_definitions(font-example PRIVATE DEBUG TEST)
if (NOT MSVC)
    target_compile_options(font-example PRIVATE -fsanitize=address,undefined)
    target_link_options(font-example PRIVATE -fsanitize=address,undefined)
endif()

add_executable(tessellation-example tessellation.c)
target_link_libraries(tessellation-example PRIVATE canvas)
target_compile_definitions(tessellation-example PRIVATE DEBUG TEST)
if (NOT MSVC)
    target_compile_options(tessellation-example PRIVATE -fsanitize=address,undefined)
    target_link_options(tessellation-example PRIVATE -fsanitize=address,undefined)
endif()
