add_executable(pdf-example pdf.c)
target_link_libraries(pdf-example PRIVATE logger pdf render)
target_compile_definitions(pdf-example PRIVATE DEBUG TEST)
if (NOT MSVC)
    target_compile_options(pdf-example PRIVATE -fsanitize=address,undefined)
    target_link_options(pdf-example PRIVATE -fsanitize=address,undefined)
endif()

add_executable(cmap-example cmap.c)
target_link_libraries(cmap-example PRIVATE logger pdf)
target_compile_definitions(cmap-example PRIVATE DEBUG TEST)
if (NOT MSVC)
    target_compile_options(cmap-example PRIVATE -fsanitize=address,undefined)
    target_link_options(cmap-example PRIVATE -fsanitize=address,undefined)
endif()

add_executable(icc-example icc.c)
target_link_libraries(icc-example PRIVATE arena logger color)
target_compile_definitions(icc-example PRIVATE DEBUG TEST)
if (NOT MSVC)
    target_compile_options(icc-example PRIVATE -fsanitize=address,undefined)
    target_link_options(icc-example PRIVATE -fsanitize=address,undefined)
endif()

add_executable(font-example font.c)
target_link_libraries(font-example PRIVATE err logger sfnt)
target_compile_definitions(font-example PRIVATE DEBUG TEST)
if (NOT MSVC)
    target_compile_options(font-example PRIVATE -fsanitize=address,undefined)
    target_link_options(font-example PRIVATE -fsanitize=address,undefined)
endif()
