add_subdirectory(arena)
add_subdirectory(canvas)
add_subdirectory(cff)
add_subdirectory(codec)
add_subdirectory(color)
add_subdirectory(geom)
add_subdirectory(logger)
add_subdirectory(pdf)
add_subdirectory(err)
add_subdirectory(postscript)
add_subdirectory(render)
add_subdirectory(sfnt)
add_subdirectory(test)
