add_library(logger src/log.c)
target_include_directories(logger PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_compile_features(logger PUBLIC c_std_11)
if (NOT MSVC)
    target_compile_options(logger PRIVATE -fsanitize=address,undefined)
    target_link_options(logger PRIVATE -fsanitize=address,undefined)
endif()
