add_library(pdf-error src/error.c)
target_include_directories(pdf-error PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(pdf-error PRIVATE pdf-logger)
target_compile_features(pdf-error PUBLIC c_std_11)
if (NOT MSVC)
    target_compile_options(pdf-error PRIVATE -fsanitize=address,undefined)
    target_link_options(pdf-error PRIVATE -fsanitize=address,undefined)
endif()
