if (NOT "$ENV{DEBUG_TEST_FUNCTION}" STREQUAL "")
    add_compile_definitions(DEBUG_TEST_FUNCTION=$ENV{DEBUG_TEST_FUNCTION})
endif()

add_library(pdf-test src/test.c src/test_assertions.c)
target_include_directories(pdf-test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(pdf-test PRIVATE logger)
target_compile_features(pdf-test PUBLIC c_std_11)
if (NOT MSVC)
    target_compile_options(pdf-test PRIVATE -fsanitize=address,undefined)
    target_link_options(pdf-test PRIVATE -fsanitize=address,undefined)
endif()

add_executable(pdf-test-main src/main.c)
target_include_directories(pdf-test-main PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(pdf-test-main PUBLIC -Wl,--whole-archive arena cff codec pdf postscript sfnt -Wl,--no-whole-archive)
target_link_libraries(pdf-test-main PRIVATE pdf-test logger)
target_compile_features(pdf-test-main PUBLIC c_std_11)
target_compile_definitions(pdf-test PUBLIC DEBUG $<$<NOT:$<C_COMPILER_ID:MSVC>>:TEST>)
if (NOT MSVC)
    target_compile_options(pdf-test-main PRIVATE -fsanitize=address,undefined)
    target_link_options(pdf-test-main PRIVATE -fsanitize=address,undefined)
endif()
