add_library(pdf-test test.c "${pdf_SOURCE_DIR}/include/test/test.h")
target_include_directories(pdf-test PUBLIC "${pdf_SOURCE_DIR}/include")
target_link_libraries(pdf-test PRIVATE pdf-logger)
target_compile_features(pdf-test PUBLIC c_std_23)
target_compile_options(pdf-test PRIVATE -fsanitize=address)
target_link_options(pdf-test PRIVATE -fsanitize=address)

add_executable(pdf-test-main main.c)
target_include_directories(pdf-test-main PUBLIC "${pdf_SOURCE_DIR}/include")
target_link_libraries(pdf-test-main PUBLIC -Wl,--whole-archive arena pdf sfnt -Wl,--no-whole-archive)
target_link_libraries(pdf-test-main PRIVATE pdf-test)
target_compile_features(pdf-test-main PUBLIC c_std_23)
target_compile_definitions(pdf-test PUBLIC DEBUG TEST)
target_compile_options(pdf-test-main PRIVATE -fsanitize=address)
target_link_options(pdf-test-main PRIVATE -fsanitize=address)
